<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="70sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="340dp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/black"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/gray"
            android:text="@string/AC"
            android:textSize="15sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/gray"
            android:text="@string/negative"
            android:textSize="15sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/gray"
            android:text="@string/porcent"
            android:textSize="15sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/orange"
            android:text="@string/division"
            android:textSize="15sp" />

    </LinearLayout>


</LinearLayout>